modified class Main.java