@@ -18,24 +18,38 @@ public class Main
         destination.setName("Destination");
 
         // Initialize disks on the source rod
-        for (int i = numDisks; i > 0; i--) {
+        for (int i = numDisks; i > 0; i--)
+        {
             Disk disk = new Disk();
             disk.setSizeOfDisk(i);
             source.addDisk(disk);
         }
 
+        System.out.println("============> Target disk: ");
+        for (Disk disk : source.getDisks())
+        {
+            System.out.println("===========>: disk " + disk.getSizeOfDisk());
+        }
+
         // Solve Tower of Hanoi problem recursively
         moveDisks(numDisks, source, destination, auxiliary);
+
+        System.out.println("=========> Solve Tower of Hanoi problem recursively, result: ");
+        for (Disk disk : destination.getDisks())
+        {
+            System.out.println("==========> disk " + disk.getSizeOfDisk());
+        }
     }
 
-    private static void moveDisks(int numDisks, Rod source, Rod destination, Rod auxiliary) {
+    private static void moveDisks(int numDisks, Rod source, Rod destination, Rod auxiliary)
+    {
         if (numDisks == 0)
         {
             return; // If there are no disks to move, the method returns, which means the end of the recursion
         }
 
         moveDisks(numDisks - 1, source, auxiliary, destination); // Move everything except from the bottom disk from the source rod to the auxiliary rod
-        Disk topDisk = source.getDisks().remove(source.getDisks().size() - 1); // Uses remove() method to remove the disk on the last index
+        Disk topDisk = source.getDisks().removeLast(); // Uses remove() method to remove the disk on the last index
         destination.addDisk(topDisk); // Adds the removed disk from the source rod to the destination rod
         System.out.println("Move disk " + topDisk.getSizeOfDisk() + " from " + source.getName() + " to " + destination.getName());
         moveDisks(numDisks - 1, auxiliary, destination, source); // Another recursion, moving the disk from the auxiliary rod to the destination rod, with the source rod as the auxiliary
